# tg_sender

./: .gitignore  .gitlab-ci.yml  README.md  generate_proto.sh  pyproject.toml  run_tests.sh
src/tg_sender/: base_message_data.py  base_message_to_send.py  bot.py  bots.py  channel_delay.py  send_for_test.py  test_base_message_to_send.py  test_channel_delay.py  test_data.py  test_tg_file.py  test_tg_image.py  test_tg_text.py  tg_messages_producer.py  tg_sender.proto  tg_sender_api.py  utils.py
src/tg_sender/src/tg_sender/: tg_sender_pb2.py
